fix: skip ScrollTrigger registration on mobile (animations turned off there)

--- a/wp-content/themes/mojo-v2/src/scss/base/_gutenberg.scss
+++ b/wp-content/themes/mojo-v2/src/scss/base/_gutenberg.scss
@@ -7,6 +7,17 @@ ul{box-sizing:border-box;}
 html :where(img[class*=wp-image-]){height:auto;max-width:100%;}
 :where(figure){margin:0 0 1em;}
 
+.wp-block-gallery.has-nested-images{display:flex;flex-wrap:wrap;gap:var(--wp--style--gallery-gap-default,16px);}
+.wp-block-gallery.has-nested-images figure.wp-block-image{flex-grow:1;flex-basis:calc(100% - var(--wp--style--gallery-gap-default,16px));}
+.wp-block-gallery.has-nested-images.columns-2 figure.wp-block-image{flex-basis:calc(50% - var(--wp--style--gallery-gap-default,16px) / 2);}
+.wp-block-gallery.has-nested-images.columns-3 figure.wp-block-image{flex-basis:calc(33.333% - var(--wp--style--gallery-gap-default,16px) * 2 / 3);}
+.wp-block-gallery.has-nested-images.columns-4 figure.wp-block-image{flex-basis:calc(25% - var(--wp--style--gallery-gap-default,16px) * 3 / 4);}
+.wp-block-gallery.has-nested-images.columns-5 figure.wp-block-image{flex-basis:calc(20% - var(--wp--style--gallery-gap-default,16px) * 4 / 5);}
+.wp-block-gallery.has-nested-images.columns-6 figure.wp-block-image{flex-basis:calc(16.666% - var(--wp--style--gallery-gap-default,16px) * 5 / 6);}
+.wp-block-gallery.has-nested-images.columns-7 figure.wp-block-image{flex-basis:calc(14.285% - var(--wp--style--gallery-gap-default,16px) * 6 / 7);}
+.wp-block-gallery.has-nested-images.columns-8 figure.wp-block-image{flex-basis:calc(12.5% - var(--wp--style--gallery-gap-default,16px) * 7 / 8);}
+.wp-block-gallery.has-nested-images.columns-9 figure.wp-block-image{flex-basis:calc(11.111% - var(--wp--style--gallery-gap-default,16px) * 8 / 9);}
+.wp-block-gallery.has-nested-images.columns-10 figure.wp-block-image{flex-basis:calc(10% - var(--wp--style--gallery-gap-default,16px) * 9 / 10);}
 .wp-block-gallery.has-nested-images figure.wp-block-image img{display:block;height:auto;max-width:100%!important;width:auto;}
 .wp-block-gallery.has-nested-images.is-cropped figure.wp-block-image:not(#individual-image) img{flex:1 0 0%;height:100%;object-fit:cover;width:100%;}
 .wp-block-image img{box-sizing:border-box;height:auto;max-width:100%;vertical-align:bottom;}
