--- a/wp-content/themes/mojo-v2/src/scss/blocks-render/fullblackimage.scss
+++ b/wp-content/themes/mojo-v2/src/scss/blocks-render/fullblackimage.scss
@@ -7,6 +7,17 @@
     display: flex;
     justify-content: center;
 
+    .guthContent &{
+        margin-left: calc(422.5px - 50vw);
+
+        @media screen and (max-width: 905px){
+            margin-left: s(-30);
+        }
+        @media screen and (max-width: 700px){
+            margin-left: s(-15);
+        }
+    }
+
     &__image{
        height: s(700);
        margin-bottom: 0;
