--- a/wp-content/themes/mojo-v2/src/scss/blocks-render/imagesslider.scss
+++ b/wp-content/themes/mojo-v2/src/scss/blocks-render/imagesslider.scss
@@ -12,6 +12,17 @@
         margin-left: calc(#{185px/2} - 50vw);
     }
 
+    .guthContent &{
+        margin-left: calc(422.5px - 50vw);
+
+        @media screen and (max-width: 905px){
+            margin-left: s(-30);
+        }
+        @media screen and (max-width: 700px){
+            margin-left: s(-15);
+        }
+    }
+
     .swiper-wrapper {
         padding-left: s(35);
     }
